--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Build Docker image from latest model artifact
-        run: mlflow models build-docker -m $MODEL_PATH -n workflow-ci-model
+        run: mlflow models build-docker -m $MODEL_PATH
 
       - name: Push Docker image to Docker Hub
         run: |
