--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,7 @@ jobs:
         id: get_model_path
         run: |
           MODEL_PATH=$(find mlruns -type d -path "*/artifacts/model" | sort -r | head -n 1)
-          echo "Latest model artifact path found: $MODEL_PATH"
-          echo "::set-output name=MODEL_PATH::$MODEL_PATH"
+          echo $MODEL_PATH
 
       - name: Commit and push model artifact to GitHub
         run: |
