--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,10 +52,10 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Build Docker image from latest model artifact
+      - name: Build Docker image from model
         run: |
           echo "MODEL_PATH is ${{ steps.get_model_path.outputs.path }}"
-          mlflow models build-docker -m "${{ steps.get_model_path.outputs.MODEL_PATH }}" -t workflow-ci-model:latest
+          mlflow models build-docker -m "${{ steps.get_model_path.outputs.path }}" -t workflow-ci-model:latest
 
       - name: Push Docker image to Docker Hub
         run: |
