--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Build Docker image from model
         run: |
           echo "MODEL_PATH is ${{ steps.get_model_path.outputs.path }}"
-          mlflow models build-docker -m "${{ steps.get_model_path.outputs.path }}"
+          mlflow models build-docker -m "${{ steps.get_model_path.outputs.path }}" -n workflow-ci-model
 
       - name: Docker images for debug
         run: docker images
